modules/gdscript/tests/scripts/analyzer/errors/dictionary_duplicate_key_lua_with_string.gd
func test():
	var lua_dict_with_string = {
		a = 1,
		b = 2,
		"a" = 3, # Duplicate isn't allowed.
	}
